# arff-csv

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  tests.yml
src/arff_csv/: __init__.py  cli.py  converter.py  exceptions.py  parser.py  writer.py
tests/: __init__.py  conftest.py  test_analyze.py  test_cli.py  test_converter.py  test_coverage.py  test_exceptions.py  test_parser.py  test_writer.py
